# abxbus

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  PLAN.md  README.md  TODO_child_event_completion_blocking.md  TODO_event_history_stores.md  TODO_rust_core_ffi.md  TODO_ts_full_zod_support.md  go.mod  pyproject.toml  talk.md  test.sh
abx_bus/: mix.exs
abxbus/: __init__.py  _rust.py  async_context.py  base_event.py  bridge_jsonl.py  bridge_nats.py  bridge_postgres.py  bridge_redis.py  bridge_sqlite.py  bridge_tachyon.py  bridge_utils.py  bridges.py  core_bus.py  core_client.py  event_bus.py  event_handler.py  event_history.py  event_result.py  events_suck.py  helpers.py  jsonschema.py  lock_manager.py  logging.py  middlewares.py  retry.py
abxbus-core/: Cargo.toml
abxbus-core/crates/abxbus/: Cargo.toml
abxbus-core/crates/abxbus-python/: Cargo.toml  pyproject.toml
abxbus-core/crates/abxbus-python/src/: lib.rs
abxbus-core/crates/abxbus/src/: event.rs  event_bus.rs  event_handler.rs  event_history.rs  event_result.rs  lib.rs  lock_manager.rs  monotonic_dt.rs  types.rs  uuid_gen.rs  validation.rs
abxbus-core/src/: core.rs  defaults.rs  envelope.rs  id.rs  lib.rs  locks.rs  protocol.rs  scheduler.rs  store.rs  time.rs  types.rs
abxbus-core/tests/: core_semantics.rs
abxbus-elixir/: .gitignore  mix.exs
abxbus-go/: README.md  base_event.go  core_client.go  core_event_bus.go  event_bus.go  event_handler.go  event_history.go  event_result.go  go.mod  go.sum  helpers.go  jsonl_bridge.go  lock_manager.go  middleware.go  otel_middleware.go  typed.go  uuid.go  version.go
abxbus-rust/: Cargo.toml  README.md
abxbus-ts/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
bubus/: event_bus.py
docs/: docs.json  index.mdx  quickstart.mdx
examples/: concurrency_options.py  forwarding_between_busses.py  immediate_event_processing.py  log_tree_demo.py  parent_child_tracking.py  simple.py
tests/: bridge_listener_worker.py  conftest.py  performance_runtime.py  performance_scenarios.py  required_binaries.json  resolve_binaries.sh  test_base_event.py  test_base_event_runtime_state.py  test_bridges.py  test_comprehensive_patterns.py  test_core_client.py  test_core_event_bus.py  (+29 more)
(+344 files in other folders)
