[package]
name = "abxbus-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Canonical Rust core for abxbus scheduling, locks, state, and wire envelopes"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
rmp-serde = "1.3.0"
tachyon-ipc = "0.5.1"
thiserror = "2.0.17"
uuid = { version = "1.23.1", features = ["v5", "v7", "serde"] }
libc = "0.2"

[patch.crates-io]
tachyon-sys = { path = "vendor/tachyon-sys" }
