[package]
name = "abxbus-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_abxbus_rust"
crate-type = ["cdylib"]

[dependencies]
abxbus = { path = "../abxbus" }
pyo3 = { version = "0.25", features = ["extension-module"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
