[package]
name = "abxbus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
uuid = { version = "1", features = ["v5", "v7"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
regex = "1"
dashmap = "6"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
